--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Apache Spark - Josh Fermin</title>
+		<title>Mongo Sharding + GridFS - Josh Fermin</title>
 
 		<meta name="description" content="Apache Spark - Cluster Computing">
 		<meta name="author" content="Josh Fermin">
@@ -41,25 +41,22 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>Apache Spark</h1>
+					<h3>Mongo Sharding + GridFS</h3>
 					<p>
 						<small>By <a href="http://joshfermin.me">Josh Fermin</a></small>
 					</p>
 				</section>
 
 				<section>
-					<h2>What is Apache Spark?</h2>
+					<h2>What is Sharding?</h2>
 					<p class="fragment">
-						Open source data analytics cluster computing framework
+						Storing data across multiple nodes/machines.
 					</p>
 					<p class="fragment">
-						Real-Time vs Interactive vs Batch processing
+						A single machine may run out of storage or have bottlenecked reads and writes
 					</p>
 					<p class="fragment">
-						Write apps in Java, Scala or Python.
-					</p>
-					<p class="fragment">
-						Map Reduce is only a part of supported capabilities.
+						Sharding is horizontally scalable - Add machines as demand increases.
 					</p>
 
 					<aside class="notes">
