--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
 				<section>
 					<section>
-						<h2>Learning Spark API</h2>
+						<h2>Mongo Sharding Tutorial</h2>
 						<p>
 						<a href="https://spark.apache.org/docs/latest/quick-start.html">Problem:</a> Count how many lines a word shows up in a document
 						</p>
